@@ -52,10 +52,20 @@
 			<label index="search_tiersTitle">Search by agency</label>
 			<label index="search_fileFormatOther">Other</label>
 			<label index="search_licencesTitle">Licences</label>
+			<label index="search_update">Update from</label>
+			<label index="search_update_day">1 day</label>
+			<label index="search_update_week">1 week</label>
+			<label index="search_update_month">1 month</label>
+			<label index="search_update_none">None</label>
 			<label index="fileformat">File format</label>
 			<label index="rss_alt">Lien to RSS page</label>
 			<label index="rss_title">Lien to RSS page</label>
 			<label index="rss_text">RSS feed</label>
+			<label index="selectedCriteria">Vos critères de recherche</label>
+			<label index="sc_keywords">Keyword</label>
+			<label index="sc_tiers">Agences</label>
+			<label index="sc_formats">File formats</label>
+			<label index="sc_licences">Licences</label>
 			<label index="sort_title">Sort by</label>
 			<label index="sort_update_date">Update date</label>
 			<label index="sort_crdate">On line</label>
@@ -107,6 +117,11 @@
 			<label index="search_tiersTitle">Rechercher par département</label>
 			<label index="search_fileFormatOther">Autre</label>
 			<label index="search_licencesTitle">Licences</label>
+			<label index="search_update">Mise à jour depuis</label>
+			<label index="search_update_day">1 jour</label>
+			<label index="search_update_week">1 semaine</label>
+			<label index="search_update_month">1 mois</label>
+			<label index="search_update_none">Aucun</label>
 			<label index="fileformat">Format de fichier</label>
 			<label index="rss_alt">Lien vers la page RSS</label>
 			<label index="rss_title">Lien vers la page RSS</label>
@@ -115,6 +130,7 @@
 			<label index="sc_keywords">Mots-clés</label>
 			<label index="sc_tiers">Agences</label>
 			<label index="sc_formats">Formats</label>
+			<label index="sc_licences">Licences</label>
 			<label index="sort_title">Trier par</label>
 			<label index="sort_update_date">Date de mise à jour</label>
 			<label index="sort_crdate">Date de mise en ligne</label>
