@@ -1,3 +1,7 @@
+2012-09-11 Tsi YANG <tsi@in-cite.net>
+	* Feature: Added licences selecetde crietria.
+	* Fearure: Added filter on update date.
+
 2012-09-10 Tsi YANG <tsi@in-cite.net>
 	* Feature: Added filter on licence.
 	* Feature: Implemented sorting on research block.
